
2003-06-04	Joel Becker <joel.becker@oracle.com>

	* Makefile.orgi: Same as Configure.

2003-06-04	Joel Becker <joel.becker@oracle.com>

	* Configure: Removed old useless Configure.

2003-06-04	Joel Becker <joel.becker@oracle.com>

	* Config.make.in: Added DEFS autoconf variable.
	* configure.in: Added call to AC_CHECK_SIZEOF.
	* include/asm-i386/osmcompat32.h: Added BITS_PER_LONG detection.
	* include/linux/osmabi.h: IODISK32 and IODISK64.
	* kernel/osm.c: IODISK32 and IODISK64.
	* libosm/Makefile: Add $(DEFS) to CPPFLAGS.
	* tools/Makefile: Add $(DEFS) to CPPFLAGS.
	* tools/osmtool.c: Remove #include of osmabi.h.

2003-06-03	Joel Becker <joel.becker@oracle.com>

	* include/asm-i386/osmcompat32.h: Renamed from bad osmids.h
		name.
	* kernel/osm.c: osmcompat32.h
	* libosm/osmlib.c: osmcompat32.h
	* kernel/Makefile: Added header deps for osm.o.
	* libosm/Makefile: osmcompat32.h

2003-05-30	Joel Becker <joel.becker@oracle.com>

	* include/linux/osmkernel.h: Remove request_key_osm_ioc.
	* kernel/osm.c: Remove request_key_osm_ioc.
	* libosm/osmlib.c: Removed stupid debug printf.
	
2003-05-29	Joel Becker <joel.becker@oracle.com>

	* include/linux/osmabi.h: Add gi_version.
	* kernel/osm.c: Handle gi_version.
	* libosm/osmlib.c: Handle gi_version.
	* test/Makefile: Link libosm in, duh.

2003-05-27	Joel Becker <joel.becker@oracle.com>

	* Makefile: Added include subdir.
	* Preamble.make: Added ALL_RULES.
	* Postamble.make: Added ALL_RULES and fixed CLEAN_FILES.
	* include/Makefile: Added.
	* include/asm-i386/Makefile: Added.
	* include/linux/Makefile: Added.

2003-05-27	Joel Becker <joel.becker@oracle.com>

	* Config.make.in: Added GCCINC back.
	* Makefile: fixed 'test' subdir.
	* configure.in: Added GCCINC back.
	* kernel/Makefile: Added.
	* kernel/osm.c: Fixed a prototype.

2003-05-27	Joel Becker <joel.becker@oracle.com>

	* Preamble.make: Added.
	* Postamble.make: Added.
	* Makefile: Added.
	* libosm/Makefile: Added.
	* tools/Makefile: Added.
	* test/Makefile: Added.